(include dune.linker.inc)

(library
    (name rocks)
    (public_name rocks)
    (no_dynlink)
    (libraries ctypes ctypes.foreign)
    (modules (:standard \ rocks_linker_flags_gen))
    (c_library_flags (:standard (:include flags.sexp) %{read:dune-linker})))
    
(executable
 (name rocks_linker_flags_gen)
 (modules rocks_linker_flags_gen)
 (libraries dune.configurator core))
 
;; todo: fails with sandbox, since the generated flags are opaque to dune
(rule
 (targets flags.sexp)
 (action (run ./rocks_linker_flags_gen.exe)))
