opam-version: "2.0"
version: "0.2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "ctypes" {>= "0.4.0"}
  "ctypes-foreign" {>= "0.4.0"}
  "core" {= "v0.14.1"}
  "rocksdb_stubs" {= "10.2.1"}
  "ocamlformat" {with-dev-setup & >= "0.27.0"}
  "ocaml-lsp-server" {with-dev-setup & >= "1.18.0"}
]
